# FLock-subnet

./: .gitignore  .python-version  README.md  pyproject.toml
.github/workflows/: unit-test.yml
FLockDataset/: __init__.py  constants.py  protocol.py
FLockDataset/miners/: chain.py  data.py  model.py  set_weights.py
FLockDataset/utils/: chain.py
FLockDataset/validator/: chain.py  constants.py  database.py  dataset.py  evaluation.py  model_constants.py  trainer.py  training_args.yaml  validator_utils.py
flockoff/: constants.py
flockoff/miners/: chain.py
flockoff/utils/: git.py
flockoff/validator/: database.py  trainer.py  training_args.yaml  validator_utils.py
llx/: check_jsonl.py
neurons/: download_data_validator.py  generate_datasets.py  miner.py  validator.py
tests/FlockDataset/utils/: test_utils.py
tests/FlockDataset/validators/: test_database.py  test_evaluation.py  test_scoring.py
