[tool.poetry]
name = "FLock-subnet"
version = "0.2.0"
description = "FLock Subnet"
authors = ["Flock Devs"]
readme = "README.md"
packages = [
    {include = "FLockDataset"},
    {include = "neurons"}
]

[tool.poetry.dependencies]
python = "3.10.16"
bittensor = "^9.0.4"
python-dotenv = "^1.0.1"
huggingface-hub = "^0.29.3"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
